--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,8 +1,13 @@
 {{ define "title" }}{{ .Title }} | {{ end }}
 
+{{ define "meta" }}
+<meta name="keywords" content="{{ .Site.Params.keywords }}">
+{{ partial "meta.html" . }}
+{{ end }}
+
 {{ define "main" }}
 {{ $Paginator := .Paginate (where .Data.Pages "Type" "post") }}
-{{ range (.Paginator 5).Pages }}
+{{ range (.Paginator 10).Pages }}
 {{ .Render "li" }}
 {{ end }}
 
