--- a/layouts/partials/author.html
+++ b/layouts/partials/author.html
@@ -7,19 +7,22 @@
       <clipPath id="hex-clip">
         <use xlink:href="#shape-hex-polygon" x="0" y="0" />
       </clipPath>
-      <image x="0" y="0" width="150" height="150" xlink:href="{{ .Site.BaseURL }}img/300x300.png" clip-path="url(#hex-clip)" />
+      <image x="0" y="0" width="150" height="150" xlink:href="{{ .Site.BaseURL }}/images/profile.png"
+        clip-path="url(#hex-clip)" />
     </svg>
   </div>
   <div>
     <div class="author__desc">
-      <h3>Author Name</h3>
+      <h3>Michinobu Nishimoto (<a href="https://twitter.com/nismit_" target="_blank">@nismit_</a>)</h3>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas urna leo, iaculis vitae velit eu,
-      scelerisque blandit felis. Vivamus lacus elit, placerat in ligula ac, rhoncus pretium nisl.</p>
+      <p>記事を書いてる人: 日本のWeb制作会社に約2年半フロントエンドとして働いた後、カナダのバンクーバーで語学学校->専門学校->現地のWeb制作会社にフロントエンドとして就職。<br>
+        詳しく知りたい方は<a href="{{ .Site.BaseURL }}pages/about/">こちら</a>へ。</p>
 
       <ul class="author__social">
-        <li class="author__social__item"><a href="https://twitter.com/nismit_" target="_blank"><svg class="icon -small"><use xlink:href="#icon-twitter"/></svg></a></li>
-        <li class="author__social__item"><a href="https://github.com/Nismit" target="_blank"><svg class="icon -small"><use xlink:href="#icon-github"/></svg></a></li>
+        <li class="author__social__item"><a href="https://twitter.com/nismit_" target="_blank"><svg class="icon -small">
+              <use xlink:href="#icon-twitter" /></svg></a></li>
+        <li class="author__social__item"><a href="https://github.com/Nismit" target="_blank"><svg class="icon -small">
+              <use xlink:href="#icon-github" /></svg></a></li>
       </ul>
     </div>
   </div>
