--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,2 +1,17 @@
 @import 'reboot';
+
+@import 'variables';
+@import 'init';
 @import 'layout';
+
+// Modules
+@import 'author';
+@import 'hero';
+@import 'article';
+@import 'share';
+@import 'pagenation';
+@import 'socials';
+@import 'icons';
+@import 'tags';
+@import 'advertisement';
+@import 'copyright';
