--- a/src/scss/article.scss
+++ b/src/scss/article.scss
@@ -93,6 +93,7 @@
   h1 {
     padding-bottom: .10em;
     margin-top: 2em;
+    margin-bottom: .8em;
     border-bottom: 4px solid $_secondly-font-color;
     font-size: 1.45rem;
     line-height: 1.5;
@@ -101,6 +102,7 @@
   h2 {
     padding: .25em 0 .25em .45em;
     margin-top: 1.8em;
+    margin-bottom: .8em;
     border-left: 6px solid $_secondly-font-color;
     font-size: 1.35rem;
     line-height: 1.5;
@@ -108,10 +110,13 @@
 
   h3 {
     margin-top: 1.4em;
+    margin-bottom: .8em;
     font-size: 1.25rem;
   }
 
   h4 {
+    margin-top: .5em;
+    margin-bottom: .5em;
     font-size: 1.15rem;
   }
 
