--- a/layouts/partials/pagenation-single.html
+++ b/layouts/partials/pagenation-single.html
@@ -1,12 +1,12 @@
 <nav role="pagenation">
   <div class="pager-single">
-    {{ with .Prev }}
+    {{ with .PrevInSection }}
     <a href="{{ .Permalink }}" class="pager-single__item">
       <p class="pager-single__label">Previous Entry</p>
       <p class="pager-single__title">{{ .Title }}</p>
     </a>
     {{ end }}
-    {{ with .Next }}
+    {{ with .NextInSection }}
     <a href="{{ .Permalink }}" class="pager-single__item">
       <p class="pager-single__label">Next Entry</p>
       <p class="pager-single__title">{{ .Title }}</p>
