--- a/layouts/partials/author.html
+++ b/layouts/partials/author.html
@@ -16,7 +16,7 @@
       <h3>Michinobu Nishimoto (<a href="https://twitter.com/nismit_" target="_blank">@nismit_</a>)</h3>
 
       <p>記事を書いてる人: 日本のWeb制作会社に約2年半フロントエンドとして働いた後、カナダのバンクーバーで語学学校->専門学校->現地のWeb制作会社にフロントエンドとして就職。<br>
-        詳しく知りたい方は<a href="{{ .Site.BaseURL }}pages/about/">こちら</a>へ。</p>
+        詳しく知りたい方は<a href="{{ .Site.BaseURL }}/pages/about/">こちら</a>へ。</p>
 
       <ul class="author__social">
         <li class="author__social__item"><a href="https://twitter.com/nismit_" target="_blank"><svg class="icon -small">
