--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -14,7 +14,7 @@
   {{ hugo.Generator }}
   {{ template "_internal/twitter_cards.html" . }}
   {{ template "_internal/opengraph.html" . }}
-  <link rel="icon" href="{{ .Site.BaseURL }}/img/favicon.ico">
+  <link rel="icon" href="{{ .Site.BaseURL }}/images/favicon.ico">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link rel="canonical" href="{{ .Permalink }}">
   {{ range .AlternativeOutputFormats -}}
