--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -10,7 +10,7 @@
   {{ end }}
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="format-detection" content="telephone=no,address=no,email=no">
-  <title>{{ block "title" . }}{{ end }}{{ .Site.Title }}</title>
+  <title>{{ if .Title }} {{ .Title }} | {{ end }}{{ .Site.Title }}</title>
   {{ hugo.Generator }}
   {{ template "_internal/twitter_cards.html" . }}
   {{ template "_internal/opengraph.html" . }}
@@ -21,7 +21,7 @@
   {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
   {{ end -}}
   <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/style.css" media="all">
-  {{ if getenv "PRODUCTION" }}
+  {{ if not .Site.IsServer }}
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90679064-2"></script>
   <script>
