--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,7 +4,21 @@
 
 {{ define "main" }}
 <article class="article">
-  <p class="article__date">{{ .Lastmod.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}</p>
+  <p class="article__date">
+    <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
+      <svg class="icon -date">
+        <use xlink:href="#icon-calendar" /></svg>
+      {{ .Date.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}
+    </time>
+    {{ if not (eq .Date.Unix .Lastmod.Unix) }}
+    &nbsp;
+    <time datetime="{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }}">
+      <svg class="icon -date">
+        <use xlink:href="#icon-rotate-left" /></svg>
+      {{ .Lastmod.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}
+    </time>
+    {{ end }}
+  </p>
 
   <h1 class="article__title">{{ .Title }}</h1>
 
