--- a/src/scss/icons.scss
+++ b/src/scss/icons.scss
@@ -17,6 +17,13 @@
     height: 12px;
   }
 
+  &.-date {
+    width: 17px;
+    height: 17px;
+    position: relative;
+    top: 2px;
+  }
+
   &.-logo {
     width: 80px;
     height: 80px;
