--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,7 +10,7 @@
         <use xlink:href="#icon-calendar" /></svg>
       {{ .Date.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}
     </time>
-    {{ if (gt (sub .Date.Unix .Lastmod.Unix) 43200 ) }}
+    {{ if (gt (sub .Lastmod.Unix .Date.Unix) 43200 ) }}
     &nbsp;
     <time datetime="{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }}">
       <svg class="icon -date">
