--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -8,7 +8,7 @@
           <use xlink:href="#icon-calendar" /></svg>
         {{ .Date.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}
       </time>
-      {{ if not (eq .Date.Unix .Lastmod.Unix) }}
+      {{ if (gt (sub .Lastmod.Unix .Date.Unix) 43200 ) }}
       &nbsp;
       <time datetime="{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }}">
         <svg class="icon -date">
