Fix WAI-ARIA role

--- a/layouts/partials/pagenation-single.html
+++ b/layouts/partials/pagenation-single.html
@@ -1,4 +1,4 @@
-<nav role="pagenation">
+<nav role="navigation">
   <div class="pager-single">
     {{ with .PrevInSection }}
     <a href="{{ .Permalink }}" class="pager-single__item">
