--- a/layouts/partials/tagCloud.html
+++ b/layouts/partials/tagCloud.html
@@ -1,6 +1,6 @@
 <div class="tagBlock">
   <h2 class="tagBlock__title">Tags</h2>
-  <ul class="tagBlock__list">
+  <ul class="tagBlock__list" role="navigation">
     {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
     <li class="tagBlock__list__item">
       <a href="{{ "/tags/" | relLangURL }}{{ $name | urlize }}" class="tagBlock__link">{{ $name }}</a>
