--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -35,6 +35,8 @@
   </div>
   {{ end }}
 
+  {{ partial "sub-advertise" . }}
+
   <div class="article__body">
     {{ .Content }}
   </div>
@@ -55,6 +57,8 @@
 
   {{ partial "author" . }}
 </article>
+
+{{ partial "related" . }}
 
 {{ partial "advertise" . }}
 
