Update ads size

--- a/layouts/partials/sub-advertise.html
+++ b/layouts/partials/sub-advertise.html
@@ -1,7 +1,7 @@
 <div class="advertisement advertisement--sub">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!-- [Nislog] Below Thumbnail -->
-  <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6436791468025792" data-ad-slot="5295502634"
-    data-ad-format="auto" data-full-width-responsive="true"></ins>
+  <ins class="adsbygoogle" style="display:inline-block;width:688px;height:90px" data-ad-client="ca-pub-6436791468025792"
+    data-ad-slot="5295502634"></ins>
   <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 </div>
