--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -14,8 +14,14 @@
   {{ hugo.Generator }}
   {{ template "_internal/twitter_cards.html" . }}
   {{ template "_internal/opengraph.html" . }}
-  <link rel="icon" href="{{ .Site.BaseURL }}/images/favicon.ico">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="icon" href="{{ .Site.BaseURL }}/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ .Site.BaseURL }}/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ .Site.BaseURL }}/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ .Site.BaseURL }}/favicon-16x16.png">
+  <link rel="manifest" href="{{ .Site.BaseURL }}/site.webmanifest">
+  <link rel="mask-icon" href="{{ .Site.BaseURL }}/safari-pinned-tab.svg" color="#019be8">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
   <link rel="canonical" href="{{ .Permalink }}">
   {{ range .AlternativeOutputFormats -}}
   {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
