--- a/src/scss/author.scss
+++ b/src/scss/author.scss
@@ -5,11 +5,22 @@
 
 .author {
   margin-top: 3em;
-  border: 1px solid #ddd;
+  border: 1px solid var(--main-border-color);;
   padding: 1em;
 
   &__desc p {
     line-height: 1.7;
+  }
+
+  &__social {
+    &__item {
+      a {
+        transition: all 350ms;
+        &:hover {
+          opacity: 0.7;
+        }
+      }
+    }
   }
 
   @media screen and (min-width: 48em) {
