--- a/src/scss/init.scss
+++ b/src/scss/init.scss
@@ -3,6 +3,35 @@
 // and a elements style.
 //
 
+:root {
+  --main-body-color: #fefefe;
+  --main-font-color: #333;
+  --main-border-color: #ddd;
+  --primary-font-color: #019be8;
+  --secondly-font-color: #247ba0;
+  --tertiary-font-colors: #0adebd;
+  --strong-background-color: #69d2e7;
+  --code-background-color: rgba(27,31,35,0.05);
+  --pre-background-color: #f6f8fa;
+  --blockquote-color: rgba(51,51,51,0.1);
+  --pager-hover-color: #fafafa;
+  --pager-link-color: #fff;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --main-body-color: #242424;
+    --main-font-color: #bdc6cf;
+    --main-border-color: rgba(221, 221, 221, 0.4);
+    --strong-background-color: rgba(94, 190, 209, 0.7);
+    --code-background-color: rgba(69, 88, 106, 0.3);
+    --pre-background-color: #2b3841;
+    --blockquote-color: rgba(189,198,207, 0.2);
+    --pager-hover-color: rgba(24, 24, 24, 0.6);
+    --pager-link-color: #019be8;
+  }
+}
+
 *, *:before, *:after {
   box-sizing: border-box;
 }
@@ -21,8 +50,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Yu Gothic', YuGothic, 'Helvetica Neue',　Helvetica, Roboto, Arial, sans-serif;
   font-weight: 500;
   line-height: 1.6;
-  color: $_base-font-color;
-  background-color: #fefefe;
+  color: var(--main-font-color);
+  background-color: var(--main-body-color);
 }
 
 h1, h2, h3, h4, h5 {
@@ -30,7 +59,7 @@ h1, h2, h3, h4, h5 {
 }
 
 a {
-  color: $_primary-font-color;
+  color: var(--primary-font-color);
   text-decoration: none;
 
   &:hover {
