--- a/src/scss/pagenation.scss
+++ b/src/scss/pagenation.scss
@@ -12,44 +12,44 @@
   }
 
   &__link {
-    border: 1px solid $_base-border-color;
+    border: 1px solid var(--main-border-color);
     padding: .5em .8em;
+    transition: all 350ms;
 
     &:hover {
-      background-color: $_tertiary-font-colors;
-      color: #fff;
+      background-color: var(--tertiary-font-colors);
+      color: var(--pager-link-color);
       text-decoration: none;
     }
   }
 
   .active > &__link {
-    background-color: $_tertiary-font-colors;
-    color: #fff;
+    background-color: var(--tertiary-font-colors);
+    color: var(--pager-link-color);
   }
 }
 
 .pager-single {
-  // display: flex;
   margin: 0 1em;
 
   &__item {
     display: block;
     padding: 1rem;
-    border-bottom: 1px solid $_base-border-color;
+    border-bottom: 1px solid var(--main-border-color);
 
     &:first-child {
-      border-top: 1px solid $_base-border-color;
+      border-top: 1px solid var(--main-border-color);
     }
 
     &:hover {
       text-decoration: none;
-      background-color: #fafafa;
+      background-color: var(--pager-hover-color);
     }
   }
 
   &__label {
     margin: 0;
-    color: $_base-font-color;
+    color: var(--main-font-color);
   }
 
   &__title {
