--- a/src/scss/related.scss
+++ b/src/scss/related.scss
@@ -16,7 +16,7 @@
     padding: 1em;
     margin-bottom: 1em;
     text-decoration: none;
-    border: 1px solid #ddd;
+    border: 1px solid var(--main-border-color);;
     transition: all .2s;
     position: relative;
 
@@ -42,22 +42,22 @@
     }
 
     &:hover {
-      color: #0adebd;
+      color: var(--tertiary-font-colors);
       text-decoration: none;
 
       &:before {
         width: 100%;
         height: 100%;
-        border-bottom-color: #0adebd;
-        border-left-color: #0adebd;
+        border-bottom-color: var(--tertiary-font-colors);
+        border-left-color: var(--tertiary-font-colors);
         transition: height .3s, width .3s .3s;
       }
 
       &:after {
         width: 100%;
         height: 100%;
-        border-top-color: #0adebd;
-        border-right-color: #0adebd;
+        border-top-color: var(--tertiary-font-colors);
+        border-right-color: var(--tertiary-font-colors);
         transition: height .3s, width .3s .3s;
       }
     }
