--- a/src/scss/share.scss
+++ b/src/scss/share.scss
@@ -4,8 +4,8 @@
 //
 
 .share {
-  border-top: 3px solid $_base-border-color;
-  border-bottom: 3px solid $_base-border-color;
+  border-top: 3px solid var(--main-border-color);
+  border-bottom: 3px solid var(--main-border-color);
   margin: 1em 0;
 
   &__item {
@@ -21,9 +21,14 @@
 
   &__link {
     display: inline-block;
-    background-color: $_base-border-color;
+    background-color: var(--main-border-color);
     border-radius: 3px;
     padding: .25rem .55rem;
+    transition: all 350ms;
+
+    &:hover {
+      opacity: 0.7;
+    }
 
     &.-twitter {
       background-color: #1da1f2;
