--- a/src/scss/socials.scss
+++ b/src/scss/socials.scss
@@ -9,5 +9,13 @@
   &__item {
     display: inline-block;
     padding: .3em .8em;
+
+    a {
+      transition: all 350ms;
+
+      &:hover {
+        opacity: 0.7;
+      }
+    }
   }
 }
