--- a/src/scss/article.scss
+++ b/src/scss/article.scss
@@ -147,6 +147,7 @@
   }
 
   strong {
+    color: var(--strong-font-color);
     background: linear-gradient(transparent 70%, var(--strong-background-color) 70%);
   }
 
