--- a/src/scss/init.scss
+++ b/src/scss/init.scss
@@ -10,6 +10,7 @@
   --primary-font-color: #019be8;
   --secondly-font-color: #247ba0;
   --tertiary-font-colors: #0adebd;
+  --strong-font-color: #333;
   --strong-background-color: #69d2e7;
   --code-background-color: rgba(27,31,35,0.05);
   --pre-background-color: #f6f8fa;
@@ -23,7 +24,8 @@
     --main-body-color: #242424;
     --main-font-color: #bdc6cf;
     --main-border-color: rgba(221, 221, 221, 0.4);
-    --strong-background-color: rgba(94, 190, 209, 0.7);
+    --strong-font-color: rgba(255, 255, 255, 0.9);
+    --strong-background-color: rgba(20, 216, 255, 0.5);
     --code-background-color: rgba(69, 88, 106, 0.3);
     --pre-background-color: #2b3841;
     --blockquote-color: rgba(189,198,207, 0.2);
