--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -37,5 +37,6 @@
 
     gtag('config', 'UA-90679064-2');
   </script>
+  <script data-ad-client="ca-pub-6436791468025792" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   {{ end }}
 </head>
