--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode | default .Site.Language.Lang }}">
 
-{{- partial "head.html" . -}}
+<head>
+    {{ partial "head.html" . }}
+</head>
 
 <body>
-    {{- partial "svg" . -}}
-    {{- partial "header.html" . -}}
+    {{ partial "svg" . }}
+    {{ partial "header.html" . }}
+
     <main role="main" class="l-container">
+
         {{- block "main" . }}{{- end }}
+    
     </main>
-    {{- partial "footer.html" . -}}
+
+    {{ partial "footer.html" . }}
+    {{ partial "scripts-footer.html" . }}
 </body>
 
 </html>
