--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,42 +1,48 @@
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  {{ with .Description }}
-  <meta name="description" content="{{ . }}">
-  {{ else }}
-  {{ with .Site.Params.description }}
-  <meta name="description" content="{{ . }}">
-  {{ end }}
-  {{ end }}
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="format-detection" content="telephone=no,address=no,email=no">
-  <title>{{ if .Title }} {{ .Title }} | {{ end }}{{ .Site.Title }}</title>
-  {{ hugo.Generator }}
-  {{ template "_internal/twitter_cards.html" . }}
-  {{ template "_internal/opengraph.html" . }}
-  <link rel="icon" href="{{ .Site.BaseURL }}/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ .Site.BaseURL }}/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ .Site.BaseURL }}/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ .Site.BaseURL }}/favicon-16x16.png">
-  <link rel="manifest" href="{{ .Site.BaseURL }}/site.webmanifest">
-  <link rel="mask-icon" href="{{ .Site.BaseURL }}/safari-pinned-tab.svg" color="#019be8">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">
-  <link rel="canonical" href="{{ .Permalink }}">
-  {{ range .AlternativeOutputFormats -}}
-  {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
-  {{ end -}}
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/style.css" media="all">
-  {{ if not .Site.IsServer }}
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-90679064-2"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="format-detection" content="telephone=no,address=no,email=no">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{{ hugo.Generator }}
 
-    gtag('config', 'UA-90679064-2');
-  </script>
-  <script data-ad-client="ca-pub-6436791468025792" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  {{ end }}
-</head>
+{{ if .IsHome }}
+<title>{{ .Site.Title }}</title>
+{{ else }}
+<title>{{ .Title }} | {{ .Site.Title }}</title>
+{{ end }}
+{{ if or (.Params.description) (.Site.Params.description) }}
+<meta name="description" content="{{ if .Params.description }}{{ .Params.description }}{{ else }}{{ .Site.Params.description }}{{ end }}" />
+{{ end }}
+
+{{ template "_internal/opengraph.html" . }}
+{{ template "_internal/twitter_cards.html" . }}
+
+<link rel="icon" href="{{ .Site.BaseURL }}/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="{{ .Site.BaseURL }}/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ .Site.BaseURL }}/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ .Site.BaseURL }}/favicon-16x16.png">
+<link rel="manifest" href="{{ .Site.BaseURL }}/site.webmanifest">
+<link rel="mask-icon" href="{{ .Site.BaseURL }}/safari-pinned-tab.svg" color="#019be8">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
+<link rel="canonical" href="{{ .Permalink }}">
+
+{{ range .AlternativeOutputFormats -}}
+{{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+{{ end -}}
+
+<link rel="stylesheet" href="{{ .Site.BaseURL }}/css/style.css" media="all">
+
+{{ if not .Site.IsServer }}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-90679064-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'UA-90679064-2');
+</script>
+<script data-ad-client="ca-pub-6436791468025792" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+{{ end }}
+
