--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,18 +5,15 @@
     {{ partial "head.html" . }}
 </head>
 
-<body>
+<body data-theme="light">
     {{ partial "svg" . }}
     {{ partial "header.html" . }}
 
-    <main role="main" class="l-container">
-
+    <main role="main">
         {{- block "main" . }}{{- end }}
-    
     </main>
 
     {{ partial "footer.html" . }}
     {{ partial "scripts-footer.html" . }}
 </body>
-
 </html>
