--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,18 +1,21 @@
-@import 'normalize';
+@import 'reboot';
+@import 'global';
 
-@import 'init';
-@import 'layout';
+// @import 'normalize';
 
-// Modules
-@import 'author';
-@import 'hero';
-@import 'article';
-@import 'share';
-@import 'pagenation';
-@import 'socials';
-@import 'icons';
-@import 'tags';
-@import 'related';
-@import 'advertisement';
-@import 'copyright';
-@import 'tips';
+// @import 'init';
+// @import 'layout';
+
+// // Modules
+// @import 'author';
+// @import 'hero';
+// @import 'article';
+// @import 'share';
+// @import 'pagenation';
+// @import 'socials';
+// @import 'icons';
+// @import 'tags';
+// @import 'related';
+// @import 'advertisement';
+// @import 'copyright';
+// @import 'tips';
