--- a/layouts/partials/scripts-footer.html
+++ b/layouts/partials/scripts-footer.html
@@ -1,1 +1,2 @@
-<script async src="https://unpkg.com/ionicons@5.1.1/dist/ionicons.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@5.1.1/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule="" src="https://unpkg.com/ionicons@5.1.1/dist/ionicons/ionicons.js"></script>
