--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,19 +1,23 @@
-<article class="article -list">
-  <a href="{{ .Permalink }}" class="article__link">
-    <h1 class="article__title -list">{{ .Title }}</h1>
-    <p class="article__desc">{{ .Params.description }}</p>
-    <p class="article__date -list">
+<article class="post">
+  <a href="{{ .Permalink }}" class="post__link">
+    <h1 class="post__title">{{ .Title }}</h1>
+
+    <p class="post__desc">{{ .Params.description }}</p>
+
+    <p class="post__date">
       <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
-        <svg class="icon -date">
-          <use xlink:href="#icon-calendar" /></svg>
-        {{ .Date.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}
+          <span class="post__date__icon">
+            <ion-icon name="calendar-outline"></ion-icon>
+          </span>
+          {{ .Date.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}
       </time>
       {{ if (gt (sub .Lastmod.Unix .Date.Unix) 43200 ) }}
       &nbsp;
       <time datetime="{{ .Lastmod.Format "2006-01-02T15:04:05Z07:00" }}">
-        <svg class="icon -date">
-          <use xlink:href="#icon-rotate-left" /></svg>
-        {{ .Lastmod.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}
+          <span class="post__date__icon">
+            <ion-icon name="calendar-outline"></ion-icon>
+          </span>
+          {{ .Lastmod.Format ( .Site.Params.dateformat | default "Jan 2, 2006") }}
       </time>
       {{ end }}
     </p>
