--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,21 +1,3 @@
 @import 'reboot';
 @import 'global';
-
-// @import 'normalize';
-
-// @import 'init';
-// @import 'layout';
-
-// // Modules
-// @import 'author';
-// @import 'hero';
-// @import 'article';
-// @import 'share';
-// @import 'pagenation';
-// @import 'socials';
-// @import 'icons';
-// @import 'tags';
-// @import 'related';
-// @import 'advertisement';
-// @import 'copyright';
-// @import 'tips';
+@import 'post';
