--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -54,3 +54,42 @@ main {
     width: 100%;
     max-width: 45em;
 }
+
+ion-icon {
+    width: 16px;
+    height: 16px;
+}
+
+.footer__social {
+    text-align: center;
+
+    &__item {
+        padding: .3rem .8rem;
+        display: inline-block;
+
+        svg {
+            width: 22px;
+            height: 22px;
+            fill: var(--main-font-color);
+        }
+
+        a {
+            transition: all 350ms;
+
+            &:hover {
+                opacity: 0.7;
+            }
+        }
+    }
+}
+
+.copyright {
+    font-size: .8rem;
+    text-align: center;
+
+    svg {
+        width: 15px;
+        height: 12px;
+        fill: #da001e;
+    }
+}
