WIP styling update

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,8 @@
 @import 'reboot';
 @import 'global';
 @import 'post';
+@import 'pagination';
 @import 'tag-cloud';
+@import 'article';
+@import 'author';
+@import 'related';
