--- a/src/scss/related.scss
+++ b/src/scss/related.scss
@@ -1,5 +1,6 @@
-.tagCloud {
-    margin: 1.5rem 1rem 2rem;
+.related-articles {
+    padding: 1rem;
+    margin: 2rem 0;
 
     &__title {
         margin-bottom: .5rem;
@@ -7,25 +8,17 @@
 
     &__list {
         padding-left: 0;
-        list-style-type: none;
-
-        &__item {
-            display: inline-block;
-            margin: .3rem .1rem;
-        }
+        list-style: none;
     }
 
-    &__link {
-        display: inline-block;
-        padding: .4rem .8rem;
-        border: 2px solid var(--main-border-color);
-        font-size: .9rem;
+    &--item {
+        display: flex;
+        padding: 1rem;
+        margin-bottom: 1rem;
         text-decoration: none;
-        position: relative;
-        outline: none;
+        border: 1px solid var(--main-border-color);;
         transition: all .2s;
-        text-transform: capitalize;
-        color: var(--primary-font-color);
+        position: relative;
 
         &:before, &:after {
             content: '';
@@ -33,40 +26,46 @@
             z-index: 2;
             width: 0;
             height: 0;
-            border: 2px solid transparent;
+            border: 1px solid transparent;
+            -webkit-box-sizing: content-box;
             box-sizing: content-box;
         }
 
         &:before {
-            top: -2px;
-            left: -2px;
+            top: -1px;
+            left: -1px;
         }
 
         &:after {
-            bottom: -2px;
-            right: -2px;
+            bottom: -1px;
+            right: -1px;
         }
 
         &:hover {
-            text-decoration: none;
             color: var(--tertiary-font-colors);
-
-            &:before, &:after {
-                width: 100%;
-                height: 100%;
-            }
+            text-decoration: none;
 
             &:before {
+                width: 100%;
+                height: 100%;
                 border-bottom-color: var(--tertiary-font-colors);
                 border-left-color: var(--tertiary-font-colors);
                 transition: height .3s, width .3s .3s;
             }
 
             &:after {
+                width: 100%;
+                height: 100%;
                 border-top-color: var(--tertiary-font-colors);
                 border-right-color: var(--tertiary-font-colors);
                 transition: height .3s, width .3s .3s;
             }
+        }
+        
+        img {
+            width: 130px;
+            height: auto;
+            margin-right: 1rem;
         }
     }
 }
