--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*!
  * Bootstrap Reboot v4.5.0 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
@@ -365,18 +366,59 @@ ion-icon {
       display: inline-block;
       vertical-align: text-bottom; }
 
+.pagination {
+  margin: 2rem 0;
+  text-align: center; }
+  .pagination__item {
+    display: inline-block; }
+  .pagination__link {
+    padding: .5em .8em;
+    text-decoration: none;
+    -webkit-transition: all 350ms;
+    transition: all 350ms;
+    border: 1px solid var(--main-border-color); }
+    .pagination__link:hover {
+      color: var(--pager-link-color);
+      background-color: var(--tertiary-font-colors); }
+  .active > .pagination__link {
+    color: var(--pager-link-color);
+    background-color: var(--tertiary-font-colors); }
+
+.pagination-single {
+  margin: 0 1rem 2rem; }
+  .pagination-single__item {
+    display: block;
+    padding: 1rem;
+    text-decoration: none;
+    -webkit-transition: all 350ms;
+    transition: all 350ms;
+    border-bottom: 1px solid var(--main-border-color); }
+    .pagination-single__item:first-child {
+      border-top: 1px solid var(--main-border-color); }
+    .pagination-single__item:hover {
+      text-decoration: none;
+      background-color: var(--pager-hover-color); }
+  .pagination-single__label {
+    margin: 0;
+    color: var(--main-font-color); }
+  .pagination-single__title {
+    margin: 0; }
+
 .tagCloud {
-  margin: 1.5rem 1rem; }
+  margin: 1.5rem 1rem 2rem; }
   .tagCloud__title {
     margin-bottom: .5rem; }
-  .tagCloud__list__itrm {
-    display: inline-block;
-    margin: .3rem .1rem; }
+  .tagCloud__list {
+    padding-left: 0;
+    list-style-type: none; }
+    .tagCloud__list__item {
+      display: inline-block;
+      margin: .3rem .1rem; }
   .tagCloud__link {
     display: inline-block;
     padding: .4rem .8rem;
     border: 2px solid var(--main-border-color);
-    font-size: .9rrem;
+    font-size: .9rem;
     text-decoration: none;
     position: relative;
     outline: none;
@@ -415,6 +457,288 @@ ion-icon {
         border-right-color: var(--tertiary-font-colors);
         -webkit-transition: height .3s, width .3s .3s;
         transition: height .3s, width .3s .3s; }
+
+.article {
+  margin: 0 1em; }
+  .article__title {
+    font-size: 1.6rem;
+    margin-bottom: .5em; }
+    .article__title.-list {
+      margin-bottom: 0;
+      font-size: 1.4rem; }
+  .article__desc {
+    margin-top: .5em;
+    margin-bottom: .5em; }
+  .article__date {
+    margin: 0;
+    font-size: .9rem; }
+    .article__date__icon {
+      width: 18px;
+      height: 18px;
+      display: inline-block;
+      vertical-align: text-bottom; }
+  .article__thumbnail img {
+    height: auto;
+    max-width: 100%; }
+  .article__toc {
+    margin: 1.3rem auto;
+    padding: .5rem;
+    border: 1px solid var(--main-border-color); }
+    .article__toc__title {
+      text-align: center;
+      font-weight: bold;
+      margin: .3rem auto; }
+    .article__toc ul {
+      list-style-type: decimal;
+      margin-left: 1.4rem; }
+      .article__toc ul ul {
+        display: none; }
+      .article__toc ul:first-child > li > ul {
+        display: block;
+        list-style-type: circle; }
+    .article__toc ol {
+      list-style-type: decimal;
+      margin-left: 1.4rem; }
+      .article__toc ol ol {
+        display: none; }
+      .article__toc ol:first-child > li > ol {
+        display: block;
+        list-style-type: circle; }
+  .article__tags {
+    margin-top: 2rem;
+    text-align: right; }
+    .article__tags ul {
+      padding-left: 0;
+      list-style-type: none; }
+    .article__tags__item {
+      display: inline-block;
+      margin-left: .3rem;
+      padding-left: .2em;
+      padding-right: .5em;
+      border: 1px solid var(--main-border-color); }
+      .article__tags__item:first-child {
+        margin-left: 0; }
+      .article__tags__item a {
+        text-decoration: none;
+        text-transform: capitalize; }
+
+.article__body h1 {
+  padding-bottom: .10em;
+  margin-top: 2em;
+  margin-bottom: .8em;
+  border-bottom: 4px solid var(--secondly-font-color);
+  font-size: 1.45rem;
+  line-height: 1.5; }
+
+.article__body h2 {
+  padding: .25em 0 .25em .45em;
+  margin-top: 1.8em;
+  margin-bottom: .8em;
+  border-left: 6px solid var(--secondly-font-color);
+  font-size: 1.35rem;
+  line-height: 1.5; }
+
+.article__body h3 {
+  margin-top: 1.4em;
+  margin-bottom: .8em;
+  font-size: 1.25rem; }
+
+.article__body h4 {
+  margin-top: .5em;
+  margin-bottom: .5em;
+  font-size: 1.15rem; }
+
+.article__body p {
+  line-height: 1.7;
+  margin-bottom: 1.45rem; }
+
+.article__body strong {
+  color: var(--strong-font-color);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(70%, transparent), color-stop(70%, var(--strong-background-color)));
+  background: linear-gradient(transparent 70%, var(--strong-background-color) 70%); }
+
+.article__body img {
+  max-width: 100%;
+  vertical-align: bottom; }
+
+.article__body hr {
+  border: 0; }
+  .article__body hr:before {
+    content: "*\a0\a0\a0*\a0\a0\a0*"; }
+
+.article__body table {
+  width: 100%;
+  border: 1px solid var(--main-border-color);
+  border-collapse: collapse;
+  margin: 1.3em 0; }
+  .article__body table th, .article__body table td {
+    border: 1px solid var(--main-border-color);
+    padding: .3em .5em; }
+
+.article__body blockquote {
+  font-style: italic;
+  position: relative;
+  margin: 2.5rem 0;
+  padding: 0 1rem; }
+  .article__body blockquote:before, .article__body blockquote:after {
+    color: var(--blockquote-color);
+    font-size: 8rem;
+    font-style: normal; }
+  .article__body blockquote:before {
+    content: '“';
+    position: absolute;
+    left: 0;
+    top: -4rem; }
+  .article__body blockquote:after {
+    content: '”';
+    position: absolute;
+    right: 0;
+    bottom: -7rem; }
+
+.article__body code {
+  padding: 0.2em 0.4em;
+  margin: 0;
+  font-size: 85%;
+  background-color: var(--code-background-color);
+  border-radius: 3px; }
+
+.article__body pre {
+  padding: 16px;
+  overflow: auto;
+  font-size: 85%;
+  line-height: 1.5;
+  background-color: var(--pre-background-color);
+  border-radius: 3px; }
+  .article__body pre > code {
+    padding: 0;
+    font-size: 100%;
+    background-color: transparent;
+    border-radius: 0; }
+
+.single-share {
+  padding: 0;
+  margin: 1rem 0;
+  border-top: 3px solid var(--main-border-color);
+  border-bottom: 3px solid var(--main-border-color); }
+  .single-share__item {
+    display: inline-block;
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+    margin-left: .6rem; }
+    .single-share__item:first-child {
+      margin-left: 0; }
+  .single-share__link {
+    display: inline-block;
+    background-color: var(--main-border-color);
+    border-radius: 3px;
+    padding: .4rem .55rem;
+    -webkit-transition: all 350ms;
+    transition: all 350ms; }
+    .single-share__link svg {
+      width: 23px;
+      height: 23px;
+      fill: #fff; }
+    .single-share__link:hover {
+      opacity: 0.7; }
+    .single-share__link.-twitter {
+      background-color: #1da1f2; }
+    .single-share__link.-facebook {
+      background-color: #3b5998; }
+    .single-share__link.-hatena {
+      background-color: #008fde; }
+    .single-share__link.-pocket {
+      background-color: #ef4056; }
+    .single-share__link.-feedly {
+      background-color: #2bb24c; }
+
+.author {
+  padding: 1em;
+  margin: 3rem 0 2rem;
+  border: 1px solid var(--main-border-color); }
+  .author__desc p {
+    line-height: 1.7; }
+  .author__social__item a {
+    -webkit-transition: all 350ms;
+    transition: all 350ms; }
+    .author__social__item a:hover {
+      opacity: 0.7; }
+  .author__picture {
+    width: 150px;
+    height: 150px; }
+    .author__picture--wrapper {
+      text-align: center; }
+  .author__social {
+    padding: 0; }
+    .author__social__item {
+      display: inline-block;
+      padding: .5em .8em 0 0; }
+      .author__social__item svg {
+        width: 22px;
+        height: 22px;
+        fill: var(--main-font-color); }
+  @media screen and (min-width: 48em) {
+    .author {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex; }
+      .author__desc {
+        padding-left: 1.5rem; } }
+
+.related-articles {
+  padding: 1rem;
+  margin: 2rem 0; }
+  .related-articles__title {
+    margin-bottom: .5rem; }
+  .related-articles__list {
+    padding-left: 0;
+    list-style: none; }
+  .related-articles--item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    text-decoration: none;
+    border: 1px solid var(--main-border-color);
+    -webkit-transition: all .2s;
+    transition: all .2s;
+    position: relative; }
+    .related-articles--item:before, .related-articles--item:after {
+      content: '';
+      position: absolute;
+      z-index: 2;
+      width: 0;
+      height: 0;
+      border: 1px solid transparent;
+      -webkit-box-sizing: content-box;
+      box-sizing: content-box; }
+    .related-articles--item:before {
+      top: -1px;
+      left: -1px; }
+    .related-articles--item:after {
+      bottom: -1px;
+      right: -1px; }
+    .related-articles--item:hover {
+      color: var(--tertiary-font-colors);
+      text-decoration: none; }
+      .related-articles--item:hover:before {
+        width: 100%;
+        height: 100%;
+        border-bottom-color: var(--tertiary-font-colors);
+        border-left-color: var(--tertiary-font-colors);
+        -webkit-transition: height .3s, width .3s .3s;
+        transition: height .3s, width .3s .3s; }
+      .related-articles--item:hover:after {
+        width: 100%;
+        height: 100%;
+        border-top-color: var(--tertiary-font-colors);
+        border-right-color: var(--tertiary-font-colors);
+        -webkit-transition: height .3s, width .3s .3s;
+        transition: height .3s, width .3s .3s; }
+    .related-articles--item img {
+      width: 130px;
+      height: auto;
+      margin-right: 1rem; }
 
 
 /*# sourceMappingURL=style.css.map*/
