--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<header class="hero">
+<header>
   <h1 class="hero__title" title="NISLOG">
     <a href="{{ .Site.BaseURL }}">
       <svg class="icon -logo">
