--- a/src/scss/author.scss
+++ b/src/scss/author.scss
@@ -1,5 +1,5 @@
 .author {
-    padding: 1em;
+    padding: 1rem;
     margin: 3rem 0 2rem;
     border: 1px solid var(--main-border-color);
 
@@ -33,7 +33,7 @@
 
         &__item {
             display: inline-block;
-            padding: .5em .8em 0 0;
+            padding: .5rem .8rem 0 0;
 
             svg {
                 width: 22px;
