--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -49,6 +49,19 @@ a {
     }
 }
 
+header {
+    margin: 2em auto;
+    text-align: center;
+
+    svg {
+        width: 80px;
+        height: 80px;
+        position: relative;
+        top: 7px;
+        fill: var(--main-font-color);
+    }
+}
+
 main {
     margin: auto;
     width: 100%;
@@ -59,6 +72,14 @@ ion-icon {
     width: 16px;
     height: 16px;
 }
+
+.advertisement {
+    margin: 3rem 1rem;
+  
+    &--sub {
+      margin: 1rem;
+    }
+  }
 
 .footer__social {
     text-align: center;
