--- a/layouts/partials/author.html
+++ b/layouts/partials/author.html
@@ -24,10 +24,12 @@
         <p>{{ .Site.Params.authorDescription | safeHTML }}</p>
 
         <ul class="author__social">
-          <li class="author__social__item"><a href="{{ .Site.Params.twitter }}" target="_blank"><svg class="icon -small">
-                <use xlink:href="#icon-twitter" /></svg></a></li>
-          <li class="author__social__item"><a href="{{ .Site.Params.github }}" target="_blank"><svg class="icon -small">
-                <use xlink:href="#icon-github" /></svg></a></li>
+          <li class="author__social__item"><a href="{{ .Site.Params.twitter }}" target="_blank" rel="noopener noreferrer">
+            <svg class="icon -small"><use xlink:href="#icon-twitter" /></svg></a>
+          </li>
+          <li class="author__social__item"><a href="{{ .Site.Params.github }}" target="_blank">
+            <svg class="icon -small"><use xlink:href="#icon-github" /></svg></a>
+          </li>
         </ul>
       </div>
     </div>
