--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,31 +1,27 @@
 :root {
-    --main-body-color: #fefefe;
-    --main-font-color: #333;
-    --main-border-color: #ddd;
-    --primary-font-color: #019be8;
+    --body-background-color: #fefefe;
+    --body-font-color: #333;
     --secondly-font-color: #247ba0;
-    --tertiary-font-colors: #0adebd;
-    --strong-font-color: #333;
-    --strong-background-color: #69d2e7;
-    --code-background-color: rgba(27,31,35,0.05);
-    --pre-background-color: #f6f8fa;
-    --blockquote-color: rgba(51,51,51,0.1);
+    --primary-link-color: #8aa2d3; 
+    --secondly-link-color: #736dac;
+    --highlight-color: #69d2e7;
+    --code-background-color: rgba(36, 46, 56, 0.15);
+    --pre-background-color: #e5ecf3;
+    --main-border-color: #ddd;
     --pager-hover-color: #fafafa;
-    --pager-link-color: #fff;
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --main-body-color: #242424;
-        --main-font-color: #bdc6cf;
-        --main-border-color: rgba(221, 221, 221, 0.4);
-        --strong-font-color: rgba(255, 255, 255, 0.9);
-        --strong-background-color: rgba(20, 216, 255, 0.5);
+        --body-background-color: #191A22;
+        --body-font-color: #C1C4D1;
+        --primary-link-color: #8DAFDD;
+        --secondly-link-color: #89B8C2;
+        --highlight-color: #126284;
         --code-background-color: rgba(69, 88, 106, 0.3);
-        --pre-background-color: #2b3841;
-        --blockquote-color: rgba(189,198,207, 0.2);
+        --pre-background-color: #1E2131;
+        --main-border-color: rgba(221, 221, 221, 0.4);
         --pager-hover-color: rgba(24, 24, 24, 0.6);
-        --pager-link-color: #019be8;
     }
 }
 
@@ -34,18 +30,19 @@ body {
     font-weight: 500;
     line-height: 1.6;
     font-kerning: normal;
-    color: var(--main-font-color);
-    background-color: var(--main-body-color);
+    color: var(--body-font-color);
+    background-color: var(--body-background-color);
     -moz-osx-font-smoothing: auto;
     -webkit-font-smoothing: subpixel-antialiased;
 }
 
 a {
     text-decoration: underline;
-    color: var(--primary-font-color);
+    color: var(--primary-link-color);
 
     &:hover {
         text-decoration: none;
+        color: var(--secondly-link-color);
     }
 }
 
@@ -58,7 +55,7 @@ header {
         height: 80px;
         position: relative;
         top: 7px;
-        fill: var(--main-font-color);
+        fill: var(--body-font-color);
     }
 }
 
@@ -79,7 +76,7 @@ ion-icon {
     &--sub {
       margin: 1rem;
     }
-  }
+}
 
 .footer__social {
     text-align: center;
@@ -91,7 +88,7 @@ ion-icon {
         svg {
             width: 22px;
             height: 22px;
-            fill: var(--main-font-color);
+            fill: var(--body-font-color);
         }
 
         a {
