--- a/src/scss/related.scss
+++ b/src/scss/related.scss
@@ -16,7 +16,7 @@
         padding: 1rem;
         margin-bottom: 1rem;
         text-decoration: none;
-        border: 1px solid var(--main-border-color);;
+        border: 1px solid var(--main-border-color);
         transition: all .2s;
         position: relative;
 
@@ -42,22 +42,22 @@
         }
 
         &:hover {
-            color: var(--tertiary-font-colors);
+            color: var(--secondly-link-color);
             text-decoration: none;
 
             &:before {
                 width: 100%;
                 height: 100%;
-                border-bottom-color: var(--tertiary-font-colors);
-                border-left-color: var(--tertiary-font-colors);
+                border-bottom-color: var(--secondly-link-color);
+                border-left-color: var(--secondly-link-color);
                 transition: height .3s, width .3s .3s;
             }
 
             &:after {
                 width: 100%;
                 height: 100%;
-                border-top-color: var(--tertiary-font-colors);
-                border-right-color: var(--tertiary-font-colors);
+                border-top-color: var(--secondly-link-color);
+                border-right-color: var(--secondly-link-color);
                 transition: height .3s, width .3s .3s;
             }
         }
