--- a/src/scss/tag-cloud.scss
+++ b/src/scss/tag-cloud.scss
@@ -25,7 +25,7 @@
         outline: none;
         transition: all .2s;
         text-transform: capitalize;
-        color: var(--primary-font-color);
+        color: var(--primary-link-color);
 
         &:before, &:after {
             content: '';
@@ -49,7 +49,7 @@
 
         &:hover {
             text-decoration: none;
-            color: var(--tertiary-font-colors);
+            color: var(--secondly-link-color);
 
             &:before, &:after {
                 width: 100%;
@@ -57,14 +57,14 @@
             }
 
             &:before {
-                border-bottom-color: var(--tertiary-font-colors);
-                border-left-color: var(--tertiary-font-colors);
+                border-bottom-color: var(--secondly-link-color);
+                border-left-color: var(--secondly-link-color);
                 transition: height .3s, width .3s .3s;
             }
 
             &:after {
-                border-top-color: var(--tertiary-font-colors);
-                border-right-color: var(--tertiary-font-colors);
+                border-top-color: var(--secondly-link-color);
+                border-right-color: var(--secondly-link-color);
                 transition: height .3s, width .3s .3s;
             }
         }
