--- a/src/scss/related.scss
+++ b/src/scss/related.scss
@@ -20,6 +20,10 @@
         transition: all .2s;
         position: relative;
 
+        time {
+            font-size: 0.8rem;
+        }
+
         &:before, &:after {
             content: '';
             position: absolute;
