--- a/layouts/partials/related.html
+++ b/layouts/partials/related.html
@@ -10,7 +10,7 @@
           <a href="{{ .RelPermalink }}" class="related-articles--item">
             {{ with .Params.eyecatch }}
             <div>
-              <img src="/{{ . }}" alt="thumbnail">
+              <img src="{{ . }}" alt="thumbnail">
             </div>
             {{ else }}
             <div>
