Fix parameter name

--- a/layouts/partials/author.html
+++ b/layouts/partials/author.html
@@ -8,7 +8,7 @@
         <clipPath id="hex-clip">
           <use xlink:href="#shape-hex-polygon" x="0" y="0" />
         </clipPath>
-        {{ if .Site.Params.authoImage }}
+        {{ if .Site.Params.authorImage }}
         <image x="0" y="0" width="150" height="150" xlink:href="{{ .Site.Params.authorImage }}"
           clip-path="url(#hex-clip)" />
         {{ else }}
