Replace @import to @use for next sass syntax

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,9 @@
-@import 'reboot';
-@import 'global';
-@import 'post';
-@import 'pagination';
-@import 'tag-cloud';
-@import 'article';
-@import 'author';
-@import 'related';
-@import 'tip';
+@use 'reboot';
+@use 'global';
+@use 'post';
+@use 'pagination';
+@use 'tag-cloud';
+@use 'article';
+@use 'author';
+@use 'related';
+@use 'tip';
